# llama-index-pgvector-rag-agent

./: .env.example  .gitignore  Makefile  convert_pdf.py  main.py  pyproject.toml  rag_handler.py  rag_pipeline.py  start-docker-llamacpp-server.sh  start-docker-postgresql-server.sh
docs/: gpu-setup.md  llamacpp-docker-script.md  makefile-usage.md  postgresql-docker-script.md
docs/tmp/: building_agents.py.tmp  language-models-are-injective-and-hence-invertible.md
src/: arxiv_handler.py  llamacpp_client.py  misc.py  rag.py
